# Lab_3

./: .travis.yml  CMakeLists.txt  README.md  a.travis.yml  appveyor.yml
examples/: main.cpp
sources/: print_hello_world.cpp
test/: main.cpp
